--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "",
   "type": "commonjs",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "scripts": {
+    "start": "node src/app.js",
+    "lint": "eslint src test",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^5.2.1"
