--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,19 +2,19 @@ name: Node.js CI
 
 on: 
   push:
-    branches:
-      -main
+    branches: [main]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Use Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20.x'
+          cache: 'npm'
       - run: npm install
       - run: npm run lint
       - run: npm test
