--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Ma premiere CI
 
 on: 
   push:
@@ -18,3 +18,7 @@ jobs:
       - run: npm install
       - run: npm run lint
       - run: npm test
+      
+        env:
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
