--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Create deployment
         uses: sws2apps/render-deployment@main #consider using pin for dependabot auto update
         with:
-          serviceId: ${{ secrets.RENDER_SERVICE_ID }}
-          apiKey: ${{ secrets.RENDER_API_KEY }}
+          serviceId: srv-d5pi9o7gi27c73fo7s60
+          apiKey: rnd_tkgjClP1l9kj5GiEAef0qeCGWTU3
           node-version: lts/Jod #optional
           cli-version: 2.2.0 #optional
