--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
       
     deploy:
         runs-on: ubuntu-latest
+        steps:
         uses: sws2apps/render-deployment@main #consider using pin for dependabot auto update
         with:
           serviceId: srv-d5pi9o7gi27c73fo7s60
