--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     deploy:
         runs-on: ubuntu-latest
         steps:
-        uses: sws2apps/render-deployment@main #consider using pin for dependabot auto update
-        with:
-          serviceId: srv-d5pi9o7gi27c73fo7s60
+        - uses: sws2apps/render-deployment@main #consider using pin for dependabot auto update
+          with:
           apiKey: rnd_tkgjClP1l9kj5GiEAef0qeCGWTU3
+          serviceId: srv-d5pi9o7gi27c73fo7s60
