--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     deploy:
         runs-on: ubuntu-latest
         steps:
-        - uses: sws2apps/render-deployment@main #consider using pin for dependabot auto update
+        - uses: ttskch/render-deploy@v1.0.0
           with:
-          apiKey: rnd_tkgjClP1l9kj5GiEAef0qeCGWTU3
-          serviceId: srv-d5pi9o7gi27c73fo7s60
+          apiKey: ${{ secrets.RENDER_API_KEY }}
+          serviceId: ${{ secrets.RENDER_SERVICE_ID }}
