--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,24 +6,32 @@ on:
       - 'dev-*'
 
 jobs:
-  build:
-
+  build:                       # Job build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
           cache: 'npm'
-      - run: npm install
-      - run: npm run lint
-      - run: npm test
-      
-    deploy:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: ttskch/render-deploy@v1.0.0
-          with:
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Lint
+        run: npm run lint
+
+      - name: Run tests
+        run: npm test
+
+  deploy:                      # Job deploy séparé au même niveau que build
+    runs-on: ubuntu-latest
+    needs: build               # ne se lance que si build passe
+    steps:
+      - name: Deploy to Render
+        uses: ttskch/render-deploy@v1.0.0
+        with:
           apiKey: ${{ secrets.RENDER_API_KEY }}
           serviceId: ${{ secrets.RENDER_SERVICE_ID }}
