--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,13 @@
-name: Ma premiere CI
+name: CI/CD Dev + Prod
 
 on:
   push:
     tags:
       - 'dev-*'
+      - 'prod-*'
 
 jobs:
-  build:                       # Job build
+  build:                      
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -26,12 +27,25 @@ jobs:
       - name: Run tests
         run: npm test
 
-  deploy:                      # Job deploy séparé au même niveau que build
+  deploy-dev:                  
+    if: startsWith(github.ref, 'refs/tags/dev-')
     runs-on: ubuntu-latest
-    needs: build               # ne se lance que si build passe
+    needs: build               
     steps:
       - name: Deploy to Render
         uses: ttskch/render-deploy@v1.0.0
         with:
           apiKey: ${{ secrets.RENDER_API_KEY }}
           serviceId: ${{ secrets.RENDER_SERVICE_ID }}
+
+  deploy-prod:
+    if: startsWith(github.ref, 'refs/tags/prod-')
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to Railway
+        uses: railwayapp/railway-action@v2
+        with:
+          apiKey: ${{ secrets.RAILWAY_API_KEY }}
+          projectId: ${{ secrets.RAILWAY_PROJECT_ID }}
+          serviceName: "production"
