--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,3 +49,19 @@ jobs:
           apiKey: ${{ secrets.RAILWAY_API_KEY }}
           projectId: ${{ secrets.RAILWAY_PROJECT_ID }}
           serviceName: "production"
+
+notify-discord:
+    runs-on: ubuntu-latest
+    needs: [deploy-dev, deploy-prod]  # Attend que le déploiement se termine
+    steps:
+      - name: Send Discord notification
+        env:
+          WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK }}
+          REPO: ${{ github.repository }}
+          REF: ${{ github.ref_name }}
+          STATUS: ${{ job.status }}
+        run: |
+          curl -H "Content-Type: application/json" \
+            -X POST \
+            -d "{\"content\": \"CI/CD update for **$REPO** on **$REF** finished with status: **$STATUS**\"}" \
+            $WEBHOOK_URL
