--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Dev + Prod
+name: CI/CD Dev + Prod + Discord
 
 on:
   push:
@@ -11,21 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
           cache: 'npm'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Lint
-        run: npm run lint
-
-      - name: Run tests
-        run: npm test
+      - run: npm install
+      - run: npm run lint
+      - run: npm test
 
   deploy-dev:                  
     if: startsWith(github.ref, 'refs/tags/dev-')
@@ -50,9 +43,9 @@ jobs:
           projectId: ${{ secrets.RAILWAY_PROJECT_ID }}
           serviceName: "production"
 
-notify-discord:
+  notify-discord:
     runs-on: ubuntu-latest
-    needs: [deploy-dev, deploy-prod]  # Attend que le déploiement se termine
+    needs: [deploy-dev, deploy-prod]  # attend que les déploiements se terminent
     steps:
       - name: Send Discord notification
         env:
